index.css
body {
  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
  font-weight: 400;
  background: rgb(235, 237, 238);
  background: linear-gradient(0deg, rgba(235, 237, 238, 1) 0%, rgba(253, 251, 251, 1) 50%);
  color: #000;
  padding: 0;

  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (prefers-color-scheme: dark) {
  body {
    background: rgb(44 44 44);
    background: linear-gradient(0deg, rgb(44 44 44) 0%, rgb(29 29 29) 50%)
    color: #fff;
  }
}

a,
a:hover,
a:focus,
a:active {
  text-decoration: none;
}

.tiles {
  color: inherit;
  display: flex;
  flex-flow: row wrap;
  align-content: space-between;
  justify-content: center;
}

@media screen and (min-width: 1100px) {
  .tiles {
    max-width: 1100px;
  }
}

.tile {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  -webkit-appearance: none;
  border-radius: 4px;
  width: 188px;
  height: 120px;
  margin: 1rem;
  box-sizing: border-box;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.28);
  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
  position: relative;
}
.tile:hover,
.tile:focus,
.tile:active {
  box-shadow: 0 5px 12px rgba(0, 0, 0, 0.3);
  /* transform: translateY(-3px); */
}
.tile .title {
  opacity: 0;
  font-size: 16px;
  font-weight: 400;
  text-rendering: optimizeLegibility;
  transition: all ease-in-out 150ms;
  position: absolute;
  bottom: -1.2rem;
  left: 0;
  color: #bbb;
  width: 188px;
  height: 1rem;
  text-align: center;
  text-shadow: none;
}
.tile:hover .title,
.tile:focus .title,
.tile:active .title {
  opacity: 1;
  /* transform: translateY(3px); */
}
.tile .icon {
  width: 80px;
  height: 80px;
  filter: invert(1);
}

